# salon_bot

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  20251205_normalize_booking_status_enum.py  Dockerfile  LICENSE  README-migrations-squash.md  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml  docker.yml  full-tests.yml  release.yml
bot/: __init__.py  config.py
bot/api/: app.py
bot/app/: __init__.py  run_bot.py  translations.py
bot/app/core/: bootstrap.py  constants.py  db.py  logger.py  notifications.py
bot/app/domain/: __init__.py  models.py
bot/app/services/: __init__.py  admin_services.py  client_services.py  master_services.py  shared_services.py
bot/app/telegram/: main_router.py
bot/app/tests_new/: conftest.py  test_constants.py  test_db.py  test_models.py
bot/app/workers/: expiration.py  reminders.py
bot/migrations/: env.py  script.py.mako  utils.py
bot/migrations/versions/: 0001_initial_schema.py  0006_add_price_tracking_columns.py  0007_add_profile_tables.py  0008_add_reminder_flags.py  0009_add_booking_ratings.py  0010_master_profile_rating_defaults.py  0011_avg_rating_float.py  0012_master_client_notes.py  059d7e16020d_merge_heads.py  0b5b3de67b66_merge_heads.py  13773aaa69d1_merge_heads.py  20251014_add_is_admin_add_is_admin_column_to_users.py  20251016_add_reserved_confirmed_expired_to_booking_status.py  20251020_add_service_category.py  20251021_add_booking_items.py  20251022_add_duration_minutes_and_price_cents_to_service_profiles.py  20251029_add_index_bookings_master_starts_at.py  20251029_add_username_to_users.py  20251103_add_cascade_master_services_master_telegram_id.py  20251103_add_cascade_master_services_service_id.py  20251103_add_cascade_masters_profiles_notes.py  20251103_add_cascade_services_bookings.py  20251111_add_exclusion_constraints_bookings.py  20251111_add_partial_unique_index_bookings_master_starts_at_active.py  20251117_set_service_created_at_timestamptz.py  20251118_master_service_duration.py  20251119061000_add_updated_at_columns.py  20251119120000_master_schedules.py  20251122_add_master_user_names.py  20251122_merge_updated_at_and_master_names.py  20251130_add_last_reminder_fields.py  20251203_add_bookingstatus_remaining_labels.py  20251203_add_bookingstatus_uppercase_labels.py  20251203_add_enum_casts_booking_status.py  20251203_convert_bookings_status_to_bookingstatus.py  20251203_create_bookingstatus_and_settings.py  20251203_squash_initial.py  (+93 more)
bot/scripts/: prune_placeholders.py
docs/: ARCHITECTURE.md  DEPLOY.md  DEVELOPER_MANUAL.md
scripts/: finish_archive_and_commit.sh  generate_squashed_schema.sh
webapp/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webapp/src/: App.tsx  i18n.ts  styles.css
webapp/src/api/: booking.ts  (+2 more)
(+24 files in other folders)
