[project]
name = "salon-bot"
version = "0.1.0"
description = "Async Telegram salon bot"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "aiogram>=3.4.1",
    "SQLAlchemy>=2.0.0",
    "cyclonedx-python-lib>=5,<10",
    "Babel>=2.15",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pyjwt>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "black>=24.8.0",
    "isort>=5.12.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "coverage>=7.0",
    "xenon>=0.9",
    "pip-audit>=2.7",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "SIM"]
ignore = ["E501", "E402"]

[tool.ruff.lint.per-file-ignores]
"bot/app/tests/**/*.py" = ["E402", "F841", "F823"]
"bot/app/services/client/history_service.py" = ["F405"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = false
explicit_package_bases = true
packages = ["bot"]

[[tool.mypy.overrides]]
module = "bot.app.core.*"
strict = true

[tool.pytest.ini_options]
addopts = "-q --cov=bot.app.core --cov=bot.app.domain --cov-report=xml --cov-report=term"
testpaths = ["bot/app/tests_new"]

[tool.coverage.run]
branch = true
source = ["bot/app/core", "bot/app/domain"]
omit = [
    "bot/app/tests*/*",
    "bot/app/__init__.py",
    "bot/app/run_bot.py",
    "bot/app/translations.py",
    "bot/app/services/*",
    "bot/app/telegram/*",
    "bot/api/*"
]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 10